--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -4,7 +4,7 @@
 
 [[ტულუს ჰოსტილიუსი|ტულუს ჰოსტილიუსის]] სიკვდილის შემდეგ სენატორებმა მეფედ [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] შვილიშვილი ანკუს მარციუსი აირჩიეს. მან გამეფებისთანავე სცადა ბაბიუს ადათწესების და პოლიტიკის აღორძინება. პონტიფიკუსებს უბრძანა ნუმა პომპილიუსის დარიგებები სახალხო რიტუალების შესახებ გამოექვეყნებინათ.
 
-მეზობელმა ლათინებმა ახალი მეფის მშვიდობისკენ მისწრაფება სისუსტედ აღიქვეს და შემოესივნენ რომის მიწებს.
+მეზობელმა ლათინებმა ახალი მეფის მშვიდობისკენ მისწრაფება სისუსტედ აღიქვეს და შემოესივნენ რომის მიწებს. ანკუსი მიხვდა რომ ამ სიტუაციაში ნუმასეულ ქცევაზე უფრო გამართლებული იქნებოდა ტულუსის და რომულუსისნაერი ქცევა, მაგრამ მიუხედავად ამ გადაწყვეტილებისა, მან იზრუნა საომარი დროისთვისაც შემოეღო ისეთი რიტუალები, როგორიც მისმა ბაბუამ მშვიდობიანობისთვის შემოიღო.
 
 ==ლიტერატურა==
 
