--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -6,6 +6,8 @@
 
 მეზობელმა ლათინებმა ახალი მეფის მშვიდობისკენ მისწრაფება სისუსტედ აღიქვეს და შემოესივნენ რომის მიწებს. ანკუსი მიხვდა რომ ამ სიტუაციაში ნუმასეულ ქცევაზე უფრო გამართლებული იქნებოდა ტულუსის და რომულუსისნაერი ქცევა, მაგრამ მიუხედავად ამ გადაწყვეტილებისა, მან იზრუნა საომარი დროისთვისაც შემოეღო ისეთი რიტუალები, როგორიც მისმა ბაბუამ მშვიდობიანობისთვის შემოიღო.
 
+ამ რიტუალის თანახმად ელჩი როდესაც გადაკვეთდა იმ ქვეყნის საზღვრებს, რომელთანაც უთანხმოება იყო, თავზე შალის თავსაფარს იხურავდა და ამბობდა: "ისმინე იუპოტერო, ისმინეთ ამ ქვეყნის (სახელი) საზღვრებო, დაე შემისმინოს უზენაესმა სამართალმა. მე ვარ მთელი რომაელი ერის მაუწყებელი და პატივის დასაცავად მოვედი ელჩად, დაე დაიჯერეთ ჩემი სიტყვები!". შემდეგ იგი ჩამოთვლიდა ყველა პრეტენზიებს და მოწმედ იუპიტერს მოუხმობდა. იგივეს უმეორებდა იგი პირველ შემხვედრსაც, ქალაქის კარიბჭესთანაც და ქალაქის მთავარ მოედანზე და თუ 30 დღეში მისი პრეტენზიები არ კმაყოფილდებოდა, მაშინ იგი უკვე უცხადებდა ომს, მოწმეებად კი ყველა ღმერთებს უხმობდა. ამის შემდეგ ელჩი ბრუნდებოდა რომში.
+
 ==ლიტერატურა==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
