--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -8,6 +8,8 @@
 
 ამ რიტუალის თანახმად ელჩი როდესაც გადაკვეთდა იმ ქვეყნის საზღვრებს, რომელთანაც უთანხმოება იყო, თავზე შალის თავსაფარს იხურავდა და ამბობდა: "ისმინე იუპოტერო, ისმინეთ ამ ქვეყნის (სახელი) საზღვრებო, დაე შემისმინოს უზენაესმა სამართალმა. მე ვარ მთელი რომაელი ერის მაუწყებელი და პატივის დასაცავად მოვედი ელჩად, დაე დაიჯერეთ ჩემი სიტყვები!". შემდეგ იგი ჩამოთვლიდა ყველა პრეტენზიებს და მოწმედ იუპიტერს მოუხმობდა. იგივეს უმეორებდა იგი პირველ შემხვედრსაც, ქალაქის კარიბჭესთანაც და ქალაქის მთავარ მოედანზე და თუ 30 დღეში მისი პრეტენზიები არ კმაყოფილდებოდა, მაშინ იგი უკვე უცხადებდა ომს, მოწმეებად კი ყველა ღმერთებს უხმობდა. ამის შემდეგ ელჩი ბრუნდებოდა რომში.
 
+რომში კი მეფე იწვევდა სენატს და ეკითხებოდა სენატორებს თუ რითი უნდა ეპასუხებინათ რომის პრეტენზიების დაუკმაყოფილებლობაზე და პასუხი იყო რომ ომი უნდა დაწყებულიყო, ამგვარად სენატი ადასტურებდა ომის გამოცხადებას. ბოლოს კი ადამიანი მიდიოდა მტრის საზღვრებთან და ომის გამოცხადების სიტყვებით ოთხი მოწმის თანხლებით სტყორცნიდა შუბს მტრული სახელმწიფოს საზღვრებში.
+
 ==ლიტერატურა==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
