--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -10,6 +10,8 @@
 
 რომში კი მეფე იწვევდა სენატს და ეკითხებოდა სენატორებს თუ რითი უნდა ეპასუხებინათ რომის პრეტენზიების დაუკმაყოფილებლობაზე და პასუხი იყო რომ ომი უნდა დაწყებულიყო, ამგვარად სენატი ადასტურებდა ომის გამოცხადებას. ბოლოს კი ადამიანი მიდიოდა მტრის საზღვრებთან და ომის გამოცხადების სიტყვებით ოთხი მოწმის თანხლებით სტყორცნიდა შუბს მტრული სახელმწიფოს საზღვრებში.
 
+ანკუსმა აიღო ლათინთა ქალაქი პოლიტორიუმი და მოსახლეობა რომში გადმოასახლა. მოგვიანებით რომაელებმა აიღეს ტელენი და ფიკანუსი. ბოლოს ლათინებს მხოლოდ ერთი გამაგრებული ქალაქი დარჩათ - მედულიუსი. ამ ქალაქისთვის ბრძოლები დიდხანს გაგრძელდა. საბოლოო ბრძოლა კი ანკუსმა მოუგო და რომში დიდძალი ნადავლით დაბრუნდა. ამ მოვლენების შედეგად რომის გაზდამ მისი ტიბრის მეორე ნაპირზე განფენაც გამოიწვია. მარციუსმა ააშენა ხის ხიდი ტიბრზე და გაამაგრა დასავლეთ ნაპირი.
+
 ==ლიტერატურა==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
