--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -12,6 +12,10 @@
 
 ანკუსმა აიღო ლათინთა ქალაქი პოლიტორიუმი და მოსახლეობა რომში გადმოასახლა. მოგვიანებით რომაელებმა აიღეს ტელენი და ფიკანუსი. ბოლოს ლათინებს მხოლოდ ერთი გამაგრებული ქალაქი დარჩათ - მედულიუსი. ამ ქალაქისთვის ბრძოლები დიდხანს გაგრძელდა. საბოლოო ბრძოლა კი ანკუსმა მოუგო და რომში დიდძალი ნადავლით დაბრუნდა. ამ მოვლენების შედეგად რომის გაზდამ მისი ტიბრის მეორე ნაპირზე განფენაც გამოიწვია. მარციუსმა ააშენა ხის ხიდი ტიბრზე და გაამაგრა დასავლეთ ნაპირი.
 
+მოსახლეობის ზრდასთან ერთად გაუარესდა კრომინალური მდგომარეობაც, ამასთან საბრძოლველათ მეფემ ციხე ააგო. მისი მმათველობის დროს გაიზარდა არა მარტო ქალაქი, არამედ რომის მიწებიც. მეფემ ზღვასთან პორტი ოსტია ააშენა.
+
+მისი მმართველობის პერიოდში რომში ეტრუსკი მდიდარი არისტიკტრატი [[ლუციუს ტარკვინიუს პრისკუსი]], რომის მონავალი მეფე.
+
 ==ლიტერატურა==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
