--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -14,7 +14,9 @@
 
 მოსახლეობის ზრდასთან ერთად გაუარესდა კრომინალური მდგომარეობაც, ამასთან საბრძოლველათ მეფემ ციხე ააგო. მისი მმათველობის დროს გაიზარდა არა მარტო ქალაქი, არამედ რომის მიწებიც. მეფემ ზღვასთან პორტი ოსტია ააშენა.
 
-მისი მმართველობის პერიოდში რომში ეტრუსკი მდიდარი არისტიკტრატი [[ლუციუს ტარკვინიუს პრისკუსი]], რომის მონავალი მეფე.
+მისი მმართველობის პერიოდში რომში ეტრუსკი მდიდარი [[ლუციუს ტარკვინიუს პრისკუსი|ლუციუს ტარკვინიუსი]], რომის მომავალი მეფე. იგი მალე გახდა ანკუსის დაახლოვებული პირი და მრჩეველი.
+
+ანკუს მარციუსმა 24 წელი იმეფა.
 
 ==ლიტერატურა==
 
