--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -36,3 +36,18 @@
 [[კატეგორია:რომაული მითოლოგია]]
 [[კატეგორია:დაბადებული ძვ. წ. 675]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 617]]
+
+[[bg:Анк Марций]]
+[[de:Ancus_Marcius]]
+[[en:Ancus Marcius]]
+[[es:Anco Marcio]]
+[[fi:Ancus Marcius]]
+[[fr:Ancus Martius]]
+[[he:אנקוס מארקיוס]]
+[[hr:Anko Marcije]]
+[[it:Anco Marzio]]
+[[la:Ancus Marcius]]
+[[nl:Ancus Martius]]
+[[pt:Anco Márcio]]
+[[ru:Анк Марций]]
+[[sv:Ancus Marcius]]
