*Empty MediaWiki Message*

--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -1,1 +1,24 @@
 '''ლუციუს ტარკვინიუსი''' ''(Lucius Tarquinius)'' [[რომის სამეფო|რომის]] მეხუთე მეფე. მეფონის წლები ([[ძვ. წ. 616]]-[[ძვ. წ. 579]])
+
+==წარმოშვება და მეფედ არჩევა==
+
+==მმართველობა==
+
+==ლიტერატურა==
+
+
+[http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
+
+
+<center>
+<table border=1>
+<tr align="center" bgcolor="#FFF0F5"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
+<tr align="center"><td>[[ანკუს მარციუსი]]</td><td>[[ძვ. წ. 641]]-[[ძვ. წ. 617]]</td><td>[[ლუციუს ტარკვინიუს პრისკუსი]]</td></tr>
+</table>
+</center>
+
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის მეფეები]]
+[[კატეგორია:რომაული მითოლოგია]]
+[[კატეგორია:გარდაცვლილი ძვ. წ. 579]]
