*Empty MediaWiki Message*

--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -13,7 +13,7 @@
 <center>
 <table border=1>
 <tr align="center" bgcolor="#FFF0F5"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
-<tr align="center"><td>[[ანკუს მარციუსი]]</td><td>[[ძვ. წ. 641]]-[[ძვ. წ. 617]]</td><td>[[ლუციუს ტარკვინიუს პრისკუსი]]</td></tr>
+<tr align="center"><td>[[ანკუს მარციუსი]]</td><td>[[ძვ. წ. 641]]-[[ძვ. წ. 617]]</td><td>[[სერვიუს ტულიუსი]]</td></tr>
 </table>
 </center>
 
