*Empty MediaWiki Message*

--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -1,4 +1,4 @@
-'''სერვიუს ტულიუსი''' ''(Servius Tullius)'' (?-[[535]]) რომის მეექვსე მეფე
+'''სერვიუს ტულიუსი''' ''(Servius Tullius)'' (?-[[ძვ. წ. 535]]) რომის მეექვსე მეფე
 
 
 
