*Empty MediaWiki Message*

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -1,1 +1,18 @@
 '''ლუციუს ტარკვინიუსი''' ''(Lucius Tarquinius)''  (?-[[ძვ. წ. 495]])
+
+
+
+
+
+<center>
+<table border=1>
+<tr align="center" bgcolor="#FFF0F5"><td>წინამორბედი</td><td>რომის მეფე</td><td>შემდგომი</td></tr>
+<tr align="center"><td>[[სერვიუს ტულიუსი]]</td><td>[[ძვ. წ. 534]]-[[ძვ. წ. 510]]</td><td> - </td></tr>
+</table>
+</center>
+
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის მეფეები]]
+[[კატეგორია:რომაული მითოლოგია]]
+[[კატეგორია:გარდაცვლილი ძვ. წ. 535]]
