*Empty MediaWiki Message*

--- a/მერაბ_მამარდაშვილი.mw
+++ b/მერაბ_მამარდაშვილი.mw
@@ -7,6 +7,11 @@
 
 2001 წლის მაისში თბილისში გაიხსნა მამარდაშვილის ბიუსტი (ძეგლის ავტორი: ერნსტ ნეიზვესტნი).
 
+==მ.მამარდაშვილი და ზ.გამსახურდია==
+
+მერაბ მამარდაშვილს ეკუთვნის სიტყვები: „თუ ჩემი ხალხი პრეზიდენტად აირჩევს გამსახურდიას მე წავალ ჩემი ხალხის წინააღმდეგ“
+"Если мой народ выберет в президенты Гамсахурдия, я пойду против своего народа"
+
 ==ბიბლიოგრაფია==
 *"Формы и содержание мышления" (1968)
 *"Символ и сомнение" (совместно с А. М. Пятигорским, Иерусалим, 1982)
