--- a/მერაბ_მამარდაშვილი.mw
+++ b/მერაბ_მამარდაშვილი.mw
@@ -15,6 +15,8 @@
 წყაროები ვებში:
 [http://www.google.com/search?q=%D0%9C%D0%B0%D0%BC%D0%B0%D1%80%D0%B4%D0%B0%D1%88%D0%B2%D0%B8%D0%BB%D0%B8+%22%D0%95%D1%81%D0%BB%D0%B8+%D0%BC%D0%BE%D0%B9+%D0%BD%D0%B0%D1%80%D0%BE%D0%B4+%D0%B2%D1%8B%D0%B1%D0%B5%D1%80%D0%B5%D1%82%22 მე წავალ ჩემი ხალხის წინააღმდეგ!]
 
+[[1991-1992 წლების სამხედრო გადატრიალება]]
+
 ==ბიბლიოგრაფია==
 *"Формы и содержание мышления" (1968)
 *"Символ и сомнение" (совместно с А. М. Пятигорским, Иерусалим, 1982)
