/* მ.მამარდაშვილი და ზ.გამსახურდია */

--- a/მერაბ_მამარდაშვილი.mw
+++ b/მერაბ_მამარდაშვილი.mw
@@ -9,7 +9,7 @@
 
 ==მ.მამარდაშვილი და ზ.გამსახურდია==
 
-მერაბ მამარდაშვილს ეკუთვნის სიტყვები: „თუ ჩემი ხალხი პრეზიდენტად აირჩევს გამსახურდიას მე წავალ ჩემი ხალხის წინააღმდეგ“
+მერაბ მამარდაშვილს ეკუთვნის სიტყვები: „თუ ჩემი ხალხი პრეზიდენტად აირჩევს [[გამსახურდია, ზვიად||გამსახურდიას]] მე წავალ ჩემი ხალხის წინააღმდეგ“
 "Если мой народ выберет в президенты Гамсахурдия, я пойду против своего народа"
 
 წყაროები ვებში:
