/* წარმოშვება და მეფედ არჩევა */

--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -2,6 +2,8 @@
 
 ==წარმოშვება და მეფედ არჩევა==
 
+ლუციუსი იყო კორინთოელი დემარატის ვაჟი, მამა მისი კორინთოდან განდევნეს (ან გაიქცა) და ეტრუსკულ ქალაქ ტარკვინიუსში დასახლდა. ცოლი მოიყვანა და ორი ვაჟი, ლუკუმონი (მოგვიანებით ლუციუსი) და არუნტი შეეძინა.
+
 ==მმართველობა==
 
 ==ლიტერატურა==
