/* წარმოშვება და მეფედ არჩევა */

--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -2,7 +2,9 @@
 
 ==წარმოშვება და მეფედ არჩევა==
 
-ლუციუსი იყო კორინთოელი დემარატის ვაჟი, მამა მისი კორინთოდან განდევნეს (ან გაიქცა) და ეტრუსკულ ქალაქ ტარკვინიუსში დასახლდა. ცოლი მოიყვანა და ორი ვაჟი, ლუკუმონი (მოგვიანებით ლუციუსი) და არუნტი შეეძინა.
+ლუციუსი იყო კორინთოელი დემარატის ვაჟი, მამა მისი [[კორინთო|კორინთოდან]] განდევნეს (ან გაიქცა) და ეტრუსკულ ქალაქ ტარკვინიუსში დასახლდა. ცოლი მოიყვანა და ორი ვაჟი, ლუკუმონუსი (მოგვიანებით ლუციუსი) და არუნტი შეეძინა. ლუკომონუსის ძმა ადრე მოკვდა, ამიტომ იგი თავისი მამის ქონების ერთადერთი მემკვიდრე გახდა. მამის სიკვდილის შემდეგ მან ცოლად დიდგვაროვანი ქალი ტანაკვილი. პატივმოყვარე ქალისთვის რთული იყო იმასთან შეგუება რომ მისი მეუღლე არ სარგებლობდა ქალაქში სათანადო პატივით. ლუკუმონუსიც არ იყო პატივმოყვარეობას მთლად მოკლებული. მისმა მეუღლემ მიიჩნია რომ რომი მისი ჭკვიანი ქმრისთვის საუკეთესო ადგილი გახდებოდა, ვინაიდან რომი ახალი დაარსებული იყო და შესაბამისად იქაური არისტოკრატია ახალი წარმოშობილი იყო, თან მათ თავისი ადგილი საზოგადოებაში მხოლოდ პირადი დამსახურებებით მიიღეს.
+
+ამრიგად ცოლქმარი რომში გადასახლდა.
 
 ==მმართველობა==
 
