--- a/მერაბ_მამარდაშვილი.mw
+++ b/მერაბ_მამარდაშვილი.mw
@@ -1,5 +1,5 @@
 [[სურათი:merab_mamardashvili.jpg|thumb|290px||მერაბ მამარდაშვილი]]
-'''მერაბ მამარდაშვილი''' (1930 - 1990) -- გამოჩენილი ქართველი ფილოსოფოსი, მეცნიერებათა დოქტორი (1968), პროფესორი (1972). დაიბადა გორში. 1955 წელს დაამთავრა მოსკოვის სახელმწიფო უნივერსიტეტის ფილოსოფიის ფაკულტეტი. 1968-1987 წლებში სამეცნიერო ჟურნალის "ვოპროსი ფილოსოფიი" მთავარი რედაქტორის მოადგილე, მოსკოვის სახელმწიფო უნივერსიტეტის პროფესორი და რუსეთის მეცნიერებათა აკადემიის მოსკოვის ფილოსოფიის ინსტიტუტის უფროსი მეცნიერ თანამშრომელია.
+'''მერაბ მამარდაშვილი''' (* 1930 ―   †   1990) -- გამოჩენილი ქართველი ფილოსოფოსი, მეცნიერებათა დოქტორი (1968), პროფესორი (1972). დაიბადა გორში. 1955 წელს დაამთავრა მოსკოვის სახელმწიფო უნივერსიტეტის ფილოსოფიის ფაკულტეტი. 1968-1987 წლებში სამეცნიერო ჟურნალის "ვოპროსი ფილოსოფიი" მთავარი რედაქტორის მოადგილე, მოსკოვის სახელმწიფო უნივერსიტეტის პროფესორი და რუსეთის მეცნიერებათა აკადემიის მოსკოვის ფილოსოფიის ინსტიტუტის უფროსი მეცნიერ თანამშრომელია.
 
 1987-1990 წლებში მამარდაშვილი საქართველოს მეცნიერებათა აკადემიის ს. წერეთლის სახელობის ფილოსოფიის ინსტიტუტის განყოფილების გამგეა და თბილისის სახელმწიფო უნივერსიტეტის პროფესორი. სხვადასხვა დროს ლექციებს კითხულობდა გერმანიაში, საფრანგეთსა და სხვა ქვეყნებში.
 
@@ -12,11 +12,11 @@
 მერაბ მამარდაშვილს ეკუთვნის სიტყვები: „თუ ჩემი ხალხი პრეზიდენტად აირჩევს [[გამსახურდია, ზვიად|გამსახურდიას]] მე წავალ ჩემი ხალხის წინააღმდეგ“
 "Если мой народ выберет в президенты Гамсахурдия, я пойду против своего народа"
 
-წყაროები ვებში:
+==რესურსები ინტერნეტში==
 [http://www.google.com/search?q=%D0%9C%D0%B0%D0%BC%D0%B0%D1%80%D0%B4%D0%B0%D1%88%D0%B2%D0%B8%D0%BB%D0%B8+%22%D0%95%D1%81%D0%BB%D0%B8+%D0%BC%D0%BE%D0%B9+%D0%BD%D0%B0%D1%80%D0%BE%D0%B4+%D0%B2%D1%8B%D0%B1%D0%B5%D1%80%D0%B5%D1%82%22 მე წავალ ჩემი ხალხის წინააღმდეგ!]
 
-იხილეთ აგრეთვე:
-[[1991-1992 წლების სამხედრო გადატრიალება]]
+
+
 
 ==ბიბლიოგრაფია==
 *"Формы и содержание мышления" (1968)
@@ -30,6 +30,8 @@
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:ქართველი ფილოსოფოსები]]
+[[კატეგორია:დაბადებული 1930]]  
+[[კატეგორია:გარდაცვლილი 1990]]
 
 [[en:Merab Mamardashvili]]
 [[ru:Мамардашвили, Мераб Константинович]]
