--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -1,6 +1,6 @@
-'''ლუციუს ტარკვინიუსი''' ''(Lucius Tarquinius)'' [[რომის სამეფო|რომის]] მეხუთე მეფე. მეფონის წლები ([[ძვ. წ. 616]]-[[ძვ. წ. 579]])
+'''ლუციუს პრისკუს ტარკვინიუსი''' (''[[ლათინური ენა|ლათ.]]'' Lucius Tarquinius) [[რომის სამეფო|რომის]] მეხუთე მეფე. მეფობის წლები ([[ძვ. წ. 616]]-[[ძვ. წ. 579]])
 
-==წარმოშვება და მეფედ არჩევა==
+==წარმოშობა და მეფედ არჩევა==
 
 ლუციუსი იყო კორინთოელი დემარატის ვაჟი, მამა მისი [[კორინთო|კორინთოდან]] განდევნეს (ან გაიქცა) და ეტრუსკულ ქალაქ ტარკვინიუსში დასახლდა. ცოლი მოიყვანა და ორი ვაჟი, ლუკუმონუსი (მოგვიანებით ლუციუსი) და არუნტი შეეძინა. ლუკომონუსის ძმა ადრე მოკვდა, ამიტომ იგი თავისი მამის ქონების ერთადერთი მემკვიდრე გახდა. მამის სიკვდილის შემდეგ მან ცოლად დიდგვაროვანი ქალი ტანაკვილი. პატივმოყვარე ქალისთვის რთული იყო იმასთან შეგუება რომ მისი მეუღლე არ სარგებლობდა ქალაქში სათანადო პატივით. ლუკუმონუსიც არ იყო პატივმოყვარეობას მთლად მოკლებული. მისმა მეუღლემ მიიჩნია რომ რომი მისი ჭკვიანი ქმრისთვის საუკეთესო ადგილი გახდებოდა, ვინაიდან რომი ახალი დაარსებული იყო და შესაბამისად იქაური არისტოკრატია ახალი წარმოშობილი იყო, თან მათ თავისი ადგილი საზოგადოებაში მხოლოდ პირადი დამსახურებებით მიიღეს.
 
@@ -8,10 +8,25 @@
 
 ==მმართველობა==
 
-==ლიტერატურა==
+==რესურსები ინტერნეტში==
 
 
-[http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
+[http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის 
+დაარსებიდან]
+
+[[de: Lucius Tarquinius Priscus]]
+[[en:Tarquinius Priscus]]
+[[es:Lucio Tarquinio Prisco]]
+[[fi:Lucius Tarquinius Priscus]]
+[[fr:Tarquin l'Ancien]]
+[[he:לוקיוס טארקוויניוס פריסקוס]]
+[[hr:Lucije Tarkvinije Prisk]]
+[[it:Tarquinio Prisco]]
+[[la:Lucius Tarquinius Priscus]]
+[[nl:Lucius Tarquinius Priscus]]
+[[pt:Tarquínio Prisco]]
+[[ru:Луций Тарквиний Приск]]
+[[sv:Tarquinius Priscus]]
 
 
 <center>
