--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -1,10 +1,10 @@
-'''ლუციუს პრისკუს ტარკვინიუსი''' (''[[ლათინური ენა|ლათ.]]'' Lucius Tarquinius) [[რომის სამეფო|რომის]] მეხუთე მეფე. მეფობის წლები ([[ძვ. წ. 616]]-[[ძვ. წ. 579]])
+'''ლუციუს პრისკუს ტარკვინიუსი''' (''[[ლათინური ენა|ლათ.]]'' Lucius Tarquinius Priscus) [[რომის სამეფო|რომის]] მეხუთე მეფე. მეფობის წლები ([[ძვ. წ. 616]] - [[ძვ. წ. 579]])
 
 ==წარმოშობა და მეფედ არჩევა==
 
 ლუციუსი იყო კორინთოელი დემარატის ვაჟი, მამა მისი [[კორინთო|კორინთოდან]] განდევნეს (ან გაიქცა) და ეტრუსკულ ქალაქ ტარკვინიუსში დასახლდა. ცოლი მოიყვანა და ორი ვაჟი, ლუკუმონუსი (მოგვიანებით ლუციუსი) და არუნტი შეეძინა. ლუკომონუსის ძმა ადრე მოკვდა, ამიტომ იგი თავისი მამის ქონების ერთადერთი მემკვიდრე გახდა. მამის სიკვდილის შემდეგ მან ცოლად დიდგვაროვანი ქალი ტანაკვილი. პატივმოყვარე ქალისთვის რთული იყო იმასთან შეგუება რომ მისი მეუღლე არ სარგებლობდა ქალაქში სათანადო პატივით. ლუკუმონუსიც არ იყო პატივმოყვარეობას მთლად მოკლებული. მისმა მეუღლემ მიიჩნია რომ რომი მისი ჭკვიანი ქმრისთვის საუკეთესო ადგილი გახდებოდა, ვინაიდან რომი ახალი დაარსებული იყო და შესაბამისად იქაური არისტოკრატია ახალი წარმოშობილი იყო, თან მათ თავისი ადგილი საზოგადოებაში მხოლოდ პირადი დამსახურებებით მიიღეს.
 
-ამრიგად ცოლქმარი რომში გადასახლდა. ახლად ჩამოსულები ქალაქში კარგად მიიღეს. აქ ლუკუმონუსმა სახელი შეიცვალა და ლუციუს ტრანკვინუსი დაირქვა. ტანაკვილი არ შეცდა არჩევანში, ლუციუსმა მალე მიიპწრო რომაელთა ყურადღება და მეფესთანაც დაახლოვდა.
+ამრიგად ცოლქმარი რომში გადასახლდა. ახლად ჩამოსულები ქალაქში კარგად მიიღეს. აქ ლუკუმონუსმა სახელი შეიცვალა და ლუციუს ტრანკვინუსი დაირქვა. ტანაკვილი არ შეცდა არჩევანში, ლუციუსმა მალე მიიპყრო რომაელთა ყურადღება და მეფესთანაც დაახლოვდა.
 
 ==მმართველობა==
 
@@ -13,20 +13,6 @@
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის 
 დაარსებიდან]
-
-[[de: Lucius Tarquinius Priscus]]
-[[en:Tarquinius Priscus]]
-[[es:Lucio Tarquinio Prisco]]
-[[fi:Lucius Tarquinius Priscus]]
-[[fr:Tarquin l'Ancien]]
-[[he:לוקיוס טארקוויניוס פריסקוס]]
-[[hr:Lucije Tarkvinije Prisk]]
-[[it:Tarquinio Prisco]]
-[[la:Lucius Tarquinius Priscus]]
-[[nl:Lucius Tarquinius Priscus]]
-[[pt:Tarquínio Prisco]]
-[[ru:Луций Тарквиний Приск]]
-[[sv:Tarquinius Priscus]]
 
 
 <center>
@@ -41,3 +27,17 @@
 [[კატეგორია:რომის მეფეები]]
 [[კატეგორია:რომაული მითოლოგია]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 579]]
+
+[[de: Lucius Tarquinius Priscus]]
+[[en:Tarquinius Priscus]]
+[[es:Lucio Tarquinio Prisco]]
+[[fi:Lucius Tarquinius Priscus]]
+[[fr:Tarquin l'Ancien]]
+[[he:לוקיוס טארקוויניוס פריסקוס]]
+[[hr:Lucije Tarkvinije Prisk]]
+[[it:Tarquinio Prisco]]
+[[la:Lucius Tarquinius Priscus]]
+[[nl:Lucius Tarquinius Priscus]]
+[[pt:Tarquínio Prisco]]
+[[ru:Луций Тарквиний Приск]]
+[[sv:Tarquinius Priscus]]
