*Empty MediaWiki Message*

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -1,7 +1,7 @@
-'''ლუციუს ტარკვინიუსი''' ''(Lucius Tarquinius)''  (?-[[ძვ. წ. 495]])
+'''ლუციუს სუპერბუს ტარკვინიუსი'''  (''[[ლათინური ენა|ლათ.]]'' Lucius Tarquinius Superbus)  (* უცნობია ―   †  [[ძვ. წ. 495]]), რომაული ტრადიციით, რომის უკანასკნელი მე-7 მეფე ([[ძვ. წ. 534]] - [[ძვ. წ. 510]]).
 
 
-
+{{ესკიზი}}    
 
 
 <center>
@@ -16,3 +16,18 @@
 [[კატეგორია:რომის მეფეები]]
 [[კატეგორია:რომაული მითოლოგია]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 535]]
+
+[[de:Lucius Tarquinius Superbus]]
+[[en:Lucius Tarquinius Superbus]]
+[[es:Lucio Tarquinio el Soberbio]]
+[[fi:Lucius Tarquinius Superbus]]
+[[fr:Tarquin le Superbe]]
+[[he:לוקיוס טארקוויניוס סופרבוס]]
+[[it:Tarquinio il Superbo]]
+[[la:Lucius Tarquinius Superbus]]
+[[nl:Lucius Tarquinius Superbus]]
+[[pl:Tarkwiniusz Pyszny]]
+[[pt:Tarquínio, o Soberbo]]
+[[ru:Луций Тарквиний Гордый]]
+[[sk:Tarquinius Superbus]]
+[[sv:Tarquinius Superbus]]
