--- a/სერვიუს_ტულიუსი.mw
+++ b/სერვიუს_ტულიუსი.mw
@@ -1,8 +1,9 @@
-'''სერვიუს ტულიუსი''' ''(Servius Tullius)'' (?-[[ძვ. წ. 535]]) რომის მეექვსე მეფე
+'''სერვიუს ტულიუსი''' (''[[ლათინური ენა|ლათ.]]'' Servius Tullius) (*უცნობია ―   †  
+[[ძვ. წ. 535]], მოკლულ იქნა), რომის მეექვსე მეფე (ძვ. წ.578 - ძვ. წ. 534/5344)
 
 
 
-==ლიტერატურა==
+==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
 
@@ -12,9 +13,27 @@
 <tr align="center"><td>[[ლუციუს ტარკვინიუს პრისკუსი]]</td><td>[[ძვ. წ. 578]]-[[ძვ. წ. 535]]</td><td>[[ლუციუს ტარკვინიუს სუპერბუსი]]</td></tr>
 </table>
 </center>
-
+{{ესკიზი}}
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის მეფეები]]
 [[კატეგორია:რომაული მითოლოგია]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 535]]
+
+
+[[de:Servius Tullius]]
+[[en:Servius Tullius]]
+[[es:Servio Tulio]]
+[[fi:Servius Tullius]]
+[[fr:Servius Tullius]]
+[[he:סרביוס טוליוס]]
+[[hu:Servius Tullius]]
+[[it:Servio Tullio]]
+[[la:Servius Tullius]]
+[[nl:Servius Tullius]]
+[[pl:Serwiusz Tuliusz]]
+[[pt:Sérvio Túlio]]
+[[ru:Сервий Туллий]]
+[[sk:Servius Tullius]]
+[[sr:Сервије Тулије]]
+[[sv:Servius Tullius]]
