*Empty MediaWiki Message*

--- a/ალბა-ლონგა.mw
+++ b/ალბა-ლონგა.mw
@@ -1,4 +1,9 @@
-'''ალბა ლონგა''' (''[[ლათინური ენა|ლათ]].'' Alba Longa) ძველი ქალაქი ლაციუმში. დაარსა [[ენეოსი|ენეოსის]] ვაჟმა ასკანიუსმა. ნუმიტორუსი და ამულიუსი მისი ჩამომავლები იყვნენ მეცამეტე თაობაში.
+'''ალბა-ლონგა''' (''[[ლათინური ენა|ლათ.]]'' Alba Longa), ლათინთა უძველესი ქალაქი იტალიაში. მდებარეობს ალბანოს მთის ძირში. გადმოცემით, ქალაქი დაუარსებია [[ენეას|ენეას]] ძეს [[ასკანიუს|ასკანიუსს]] ძვ. წ. 1152, რომზე 400 წლით ადრე. ალბა-ლონგა სათავეში ედგა 30 ლათინური ქალაქის კავშირს. 
+
+ძვ. წ. VII საუკუნეში რომის მეფე ტულიუეს ჰოსტილიუსმა დაანგრია იგი, მოსახლეობა რომში გადაასახლა და მათ რომის მოქალაქეობა უბოძა. 
+
+ალბა-ლონგას თანამედროვე სახელია ალბანო-ლაციალე (Albano Laziale).  
+
 
 [[კატეგორია:ძველი_რომი]]
 
