*Empty MediaWiki Message*

--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -1,8 +1,8 @@
-'''ანკუს მარციუსი''' ''(Ancus Marcius)'' [[რომის სამეფო|რომის]] მეოთხე მეფე. ([[ძვ. წ. 675]] † [[ძვ. წ. 617]])
+'''ანკუს მარციუსი''' ''([[ლათინური ენა|ლათ.]]'' Ancus Marcius - მარსის მსახური) [[რომის სამეფო|რომის]] მეოთხე მეფე. (* [[ძვ. წ. 675]] - † [[ძვ. წ. 617]])
 
 ==ბიოგრაფია==
 
-[[ტულუს ჰოსტილიუსი|ტულუს ჰოსტილიუსის]] სიკვდილის შემდეგ სენატორებმა მეფედ [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] შვილიშვილი ანკუს მარციუსი აირჩიეს. მან გამეფებისთანავე სცადა ბაბიუს ადათწესების და პოლიტიკის აღორძინება. პონტიფიკუსებს უბრძანა ნუმა პომპილიუსის დარიგებები სახალხო რიტუალების შესახებ გამოექვეყნებინათ.
+[[ტულუს ჰოსტილიუსი|ტულუს ჰოსტილიუსის]] სიკვდილის შემდეგ სენატორებმა მეფედ [[ნუმა პომპილიუსი|ნუმა პომპილიუსის]] შვილიშვილი ანკუს მარციუსი აირჩიეს. მან გამეფებისთანავე სცადა ბაბუის ადათ-წესების და პოლიტიკის აღორძინება. პონტიფიკუსებს უბრძანა ნუმა პომპილიუსის დარიგებები სახალხო რიტუალების შესახებ გამოექვეყნებინათ.
 
 მეზობელმა ლათინებმა ახალი მეფის მშვიდობისკენ მისწრაფება სისუსტედ აღიქვეს და შემოესივნენ რომის მიწებს. ანკუსი მიხვდა რომ ამ სიტუაციაში ნუმასეულ ქცევაზე უფრო გამართლებული იქნებოდა ტულუსის და რომულუსისნაერი ქცევა, მაგრამ მიუხედავად ამ გადაწყვეტილებისა, მან იზრუნა საომარი დროისთვისაც შემოეღო ისეთი რიტუალები, როგორიც მისმა ბაბუამ მშვიდობიანობისთვის შემოიღო.
 
@@ -12,13 +12,13 @@
 
 ანკუსმა აიღო ლათინთა ქალაქი პოლიტორიუმი და მოსახლეობა რომში გადმოასახლა. მოგვიანებით რომაელებმა აიღეს ტელენი და ფიკანუსი. ბოლოს ლათინებს მხოლოდ ერთი გამაგრებული ქალაქი დარჩათ - მედულიუსი. ამ ქალაქისთვის ბრძოლები დიდხანს გაგრძელდა. საბოლოო ბრძოლა კი ანკუსმა მოუგო და რომში დიდძალი ნადავლით დაბრუნდა. ამ მოვლენების შედეგად რომის გაზდამ მისი ტიბრის მეორე ნაპირზე განფენაც გამოიწვია. მარციუსმა ააშენა ხის ხიდი ტიბრზე და გაამაგრა დასავლეთ ნაპირი.
 
-მოსახლეობის ზრდასთან ერთად გაუარესდა კრომინალური მდგომარეობაც, ამასთან საბრძოლველათ მეფემ ციხე ააგო. მისი მმათველობის დროს გაიზარდა არა მარტო ქალაქი, არამედ რომის მიწებიც. მეფემ ზღვასთან პორტი ოსტია ააშენა.
+მოსახლეობის ზრდასთან ერთად გაუარესდა კრიმინალური მდგომარეობაც, ამასთან საბრძოლველათ მეფემ ციხე ააგო. მისი მმათველობის დროს გაიზარდა არა მარტო ქალაქი, არამედ რომის მიწებიც. მეფემ ტიბრის შესართავთან ქ. ოსცია - რომის ნავსადგური ააშენა.
 
 მისი მმართველობის პერიოდში რომში ეტრუსკი მდიდარი [[ლუციუს ტარკვინიუს პრისკუსი|ლუციუს ტარკვინიუსი]], რომის მომავალი მეფე. იგი მალე გახდა ანკუსის დაახლოვებული პირი და მრჩეველი.
 
 ანკუს მარციუსმა 24 წელი იმეფა.
 
-==ლიტერატურა==
+==რესურსები ინტერნეტში==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
