--- a/ძვ._წ._42.mw
+++ b/ძვ._წ._42.mw
@@ -14,3 +14,39 @@
 
 
 [[კატეგორია:ძვ. წ. 42|*]]
+
+
+[[ca:42 aC]]
+[[cs:42 př. n. l.]]
+[[da:42 f.Kr.]]
+[[de:42 v. Chr.]]
+[[en:42 BC]]
+[[eo:-42]]
+[[es:42 adC]]
+[[fi:42 eaa]]
+[[fr:-42]]
+[[gl:-42]]
+[[hr:42 p.n.e.]]
+[[hu:I. e. 42]]
+[[id:42 SM]]
+[[io:42 aK]]
+[[it:42 a.C.]]
+[[ko:기원전 42년]]
+[[la:42 a.C.n.]]
+[[lb:-42]]
+[[ms:42 SM]]
+[[nap:42 AC]]
+[[nl:42 v. Chr.]]
+[[nn:-42]]
+[[no:42 f.Kr.]]
+[[pl:42 p.n.e.]]
+[[pt:42 a.C.]]
+[[ro:42 î.Hr.]]
+[[ru:42 до н. э.]]
+[[sk:42 pred Kr.]]
+[[sl:42 pr. n. št.]]
+[[sr:42. пне.]]
+[[sv:42 f.Kr.]]
+[[tt:MA 42]]
+[[uk:42 до Р.Х.]]
+[[zh:前42年]]
