--- a/ძვ._წ._49.mw
+++ b/ძვ._წ._49.mw
@@ -14,3 +14,34 @@
 
 
 [[კატეგორია:ძვ. წ. 49|*]]
+
+[[af:49 v.C.]]
+[[ca:49 aC]]
+[[da:49 f.Kr.]]
+[[de:49 v. Chr.]]
+[[en:49 BC]]
+[[eo:-49]]
+[[es:49 adC]]
+[[fi:49 eaa]]
+[[fr:-49]]
+[[hr:49 p.n.e.]]
+[[id:49 SM]]
+[[io:49 aK]]
+[[it:49 a.C.]]
+[[ko:기원전 49년]]
+[[lb:-49]]
+[[ms:49 SM]]
+[[nap:49 AC]]
+[[nl:49 v. Chr.]]
+[[nn:-49]]
+[[no:49 f.Kr.]]
+[[pl:49 p.n.e.]]
+[[pt:49 a.C.]]
+[[ro:49 î.Hr.]]
+[[ru:49 до н. э.]]
+[[sl:49 pr. n. št.]]
+[[sr:49. пне.]]
+[[sv:49 f.Kr.]]
+[[tt:MA 49]]
+[[uk:49 до Р.Х.]]
+[[zh:前49年]]
