--- a/ცნობილი_გერმანელები.mw
+++ b/ცნობილი_გერმანელები.mw
@@ -13,14 +13,14 @@
 *[[ბეთჰოვენი, ლუდვიგ ვან]]  – კომპოზიტორი
 *[[ბეკენბაუერი, ფრანც]] – ფეხბურთელი
 *[[ბეკერი, ბორის]] – ჩოგბურთელი
-*[[ბენცი, კარლ]] –
+*[[ბენცი, კარლ ფრიდრიხ]] – მეწარმე
 *[[ბინგენი, ჰილდეგარდ ფონ]] 
 *[[ბიომი, კარლ–ჰაინც]] – დირიჟორი
 *[[ბისმარკი, ოტო ედუარდ ლეოპოლდ]] - გერმანიის სახელმწიფო მოღვაწე, გერმანიის იმპერიის დამაარსებელი და პირველი რაიხსკანცლერი
 *[[ბოდელშვინგი, ფრიდრიხ ფონ]] 
 *[[ბოლენი, დიტერ]] – მომღერალი
 *[[ბონჰოფერი, დიტრიხ]] 
-*[[ბოში, რობერტ]] 
+*[[ბოში, რობერტ]] - მეწარმე
 *[[ბრანდტი, ვილი]]  – სახელმწიფო მოღვაწე
 *[[ბრაუნი, ვერნერ ფონ]] – მეცნიერი
 
