--- a/ძვ._წ._31.mw
+++ b/ძვ._წ._31.mw
@@ -12,6 +12,39 @@
 ==გარდაიცვალნენ==
 
 * [[კლეოპატრა|კლეოპატრამ]] თავი მოიკლა
-* [[მარკუს ანტონიუსი|მარკუს ანტონიუსმა]] თავიმოიკლა
+* [[მარკუს ანტონიუსი|მარკუს ანტონიუსმა]] თავი მოიკლა
 
 [[კატეგორია:ძვ. წ. 31|*]]
+
+[[ca:31 aC]]
+[[da:31 f.Kr.]]
+[[de:31 v. Chr.]]
+[[en:31 BC]]
+[[eo:-31]]
+[[es:31 adC]]
+[[fi:31 eaa]]
+[[fr:-31]]
+[[he:31 לפנה"ס]]
+[[hr:31 p.n.e.]]
+[[hu:I. e. 31]]
+[[id:31 SM]]
+[[io:31 aK]]
+[[it:31 a.C.]]
+[[ko:기원전 31년]]
+[[lb:-31]]
+[[ms:31 SM]]
+[[nap:31 AC]]
+[[nl:31 v. Chr.]]
+[[nn:-31]]
+[[no:31 f.Kr.]]
+[[pl:31 p.n.e.]]
+[[pt:31 a.C.]]
+[[ro:31 î.Hr.]]
+[[ru:31 до н. э.]]
+[[sk:31 pred Kr.]]
+[[sl:31 pr. n. št.]]
+[[sr:31. пне.]]
+[[sv:31 f.Kr.]]
+[[tt:MA 31]]
+[[uk:31 до Р.Х.]]
+[[zh:前31年]]
