--- a/ძვ._წ._27.mw
+++ b/ძვ._წ._27.mw
@@ -14,3 +14,38 @@
 
 
 [[კატეგორია:ძვ. წ. 27|*]]
+
+[[ca:27 aC]]
+[[cs:27 př. n. l.]]
+[[da:27 f.Kr.]]
+[[de:27 v. Chr.]]
+[[en:27 BC]]
+[[eo:-27]]
+[[es:27 adC]]
+[[et:27 eKr]]
+[[fi:27 eaa]]
+[[fr:-27]]
+[[he:27 לפנה"ס]]
+[[hr:27 p.n.e.]]
+[[hu:I. e. 27]]
+[[id:27 SM]]
+[[io:27 aK]]
+[[it:27 a.C.]]
+[[ko:기원전 27년]]
+[[lb:-27]]
+[[ms:27 SM]]
+[[nap:27 AC]]
+[[nl:27 v. Chr.]]
+[[nn:-27]]
+[[no:27 f.Kr.]]
+[[pl:27 p.n.e.]]
+[[pt:27 a.C.]]
+[[ro:27 î.Hr.]]
+[[ru:27 до н. э.]]
+[[sk:27 pred Kr.]]
+[[sl:27 pr. n. št.]]
+[[sr:27. пне.]]
+[[sv:27 f.Kr.]]
+[[tt:MA 27]]
+[[uk:27 до Р.Х.]]
+[[zh:前27年]]
