*Empty MediaWiki Message*

--- a/რომის_რესპუბლიკა.mw
+++ b/რომის_რესპუბლიკა.mw
@@ -14,11 +14,11 @@
 
 მონარქიის დამხობის შემდეგ რომში ჩამოყალიბდა რესპუბლიკური წყობა. რომის მოქალაქეები იყოფოდა [[პატრიციები|პატრიციებად]] და [[პლებეები|პლებეებად]]. რესპუბლიკის ადრეულ პერიოდში ეს გაყოფა ალბათ ქონებრივ ცენზთან იყო დაკავშირებული, ხოლო გვიანდელ რესპუბლიკაში პატრიციები პლებეებისგან მხოლოდ იმით განსხვავდებოდნენ, რომ მათ სასულიერო იერარქიაში ჰქონდათ მაღალი ადგილების დაკავების უფლება. 
 
-რომის მოქალაქეობა დაბყრობილი ერების მართვის და მათგან გამიჯვნის ინსტრუმენტი იყო. არსებობდა მოქალაქეობის რამოდენიმე დონე. (ასევე არსებობდა ლათინური მოქალაქეობაც). 
+რომის მოქალაქეობა დაპყრობილი ერების მართვის და მათგან გამიჯვნის ინსტრუმენტი იყო. არსებობდა მოქალაქეობის რამოდენიმე დონე. (ასევე არსებობდა ლათინური მოქალაქეობაც). 
 
 რომის პოლიტიკურ ცხოვრებაში კრებები (კომიციები) უწინდებურად ასრულებდნენ მნიშვნელოვან როლს, არსებობდა კრებების რამოდენიმე სახე: [[კურიების კრება]], [[ცენტურიების კრება]], [[ტრიბების კრება]], [[პლებეების კრება]] და უზენაესი ორგანო იყო [[სენატი]]. ეს კრებები შესაბამისს საკითხებს წყეტდნენ, მათში მონაწილეობა შეეძლო შესაბამისი კლასის ან გვარის სრულწლოვან მოქალაქეს. ქალებს რომში მოქალაქეობის უფლება არ ჰქონდათ. ამ კრებებში კი ყველაზე მნიშვნელოვანი ქვეყნის პოლიტიკური ცხოვრებისთვის იყო პლებეების კრება და სენატი. კურიების კრებების ძალიან მნიშვნელოვანი იყო, მასზე ხდებოდა სენატორების არჩევა და სასამართლოები.
 
-'''მაგისტრატუსები''' წარმოადგენდნენ აღმასრულებელ ხელისუფლებას, ყოველ ზემოთხსენებულ კრებას თავისი მაგისტრუსები ჰყავდა. მაგისტრატუსის წოდება ძალიან საპატიოდ ითვლებოდა, მათ უანგაროთ უნდა შეესრულებინათ დაკისრებული საქმე და ხშირად ამისთვის პირადი სახსრების გამოყენება სჭირდებოდათ, მაგისტრები ხელშეუხლებელნი იყვნენ.
+'''მაგისტრატუსები''' წარმოადგენდნენ აღმასრულებელ ხელისუფლებას, ყოველ ზემოხსენებულ კრებას თავისი მაგისტრუსები ჰყავდა. მაგისტრატუსის წოდება ძალიან საპატიოდ ითვლებოდა, მათ უანგაროთ უნდა შეესრულებინათ დაკისრებული საქმე და ხშირად ამისთვის პირადი სახსრების გამოყენება სჭირდებოდათ, მაგისტრები ხელშეუხლებელნი იყვნენ.
 
 [[სურათი:SPQR.jpg|thumb|left|200px|Senatus Popolus Que Romanus]]
 
@@ -32,11 +32,11 @@
 
 ==იტალიის დაპყრობა==
 
-რესპუბლიკის ჩამოყალიბების პერიოდში ხმელთაშუა ზღვის რეგიონში ლიდერობდნენ ბერძნული ქალაქ სახელმწიფოები და [[კართაგენი]]. მათ შორის განუწყვეტლივ ომები მომდინარეობდა. [[ძვ. წ. III საუკუნე|ძვ. წ. III საუკუნეში]] საერთაშორისო ასპარეზზე გამოვიდა გაძლიერებული რომის რესპუბლიკა. იტალიაში არსებული ბერძნული ქალაქები ხანგძლივი ომების შედეგად ძალიან დასუსტდნენ. ამ დროისთვის დამოუკიდებლობა მხოლოდ იტალიის დასავლეთ სანაპიროზე მდებარე ქალაქემბა, ელიუსმა და რეგიუსმა შეინარჩუნეს. [[სიცილია|სიცილიაზე]] ყველაზე ძლიერი ქალაქი იყო სირაკუზა, რომელსაც მთელი კუნძული ემორჩილებოდა, მაგრამ კართაგენთან ხანგძლივი ომების შედეგად ისიც ძალიან დასუსტდა.
+რესპუბლიკის ჩამოყალიბების პერიოდში [[ხმელთაშუა ზღვა| ხმელთაშუა ზღვის]] რეგიონში ლიდერობდნენ ბერძნული ქალაქ სახელმწიფოები და [[კართაგენი]]. მათ შორის განუწყვეტლივ ომები მომდინარეობდა. [[ძვ. წ. III საუკუნე|ძვ. წ. III საუკუნეში]] საერთაშორისო ასპარეზზე გამოვიდა გაძლიერებული რომის რესპუბლიკა. იტალიაში არსებული ბერძნული ქალაქები ხანგძლივი ომების შედეგად ძალიან დასუსტდნენ. ამ დროისთვის დამოუკიდებლობა მხოლოდ იტალიის დასავლეთ სანაპიროზე მდებარე ქალაქემბა, ელიუსმა და რეგიუსმა შეინარჩუნეს. [[სიცილია|სიცილიაზე]] ყველაზე ძლიერი ქალაქი იყო სირაკუზა, რომელსაც მთელი კუნძული ემორჩილებოდა, მაგრამ კართაგენთან ხანგძლივი ომების შედეგად ისიც ძალიან დასუსტდა.
 
 რომაელებმა აპენინების ნახევარკუნძულის ცენტრალური ნაწილის დაბყრობის შემდეგ, გაილაშქრეს იტალისს ბერძნულ ქალაქებზე. [[ძვ. წ. 280|ძვ. წ. 280]] წელს ბერძნულმა ქალაქმა ფურიუსმა რომაელებს დახმარება სთხოვეს. რომიდან დიდძალი ლაშქარი გაეშურა დასახმარებლად, თავდამსხმელები უკუაქციეს, და რომაელებმა ქალაქში გარნიზონი დატოვეს. ტარენტას (სხვა ბერძნული ქალაქი) მოსახელეობა ამით უკმაყოფილო დარჩა, მათ გაილაშქრეს ფურიუსზე და გააგდეს იქედან რომაელები, ამან რომსა და ტარენტუმს შორის ომი გამოიწვია.
 
-პირველ შეტაკებაში რომაელებმა გაიმარჯვეს. ტარენტელებმა [[ეპიროსი|ეპიროსის]] მეფეს [[პიროსი|პიროსს]], თავისი ეპოქის ერთერთ უდიდეს მხედართმთავარს, მიმართეს დახმარებისთვის. ძვ. წ. 280 წლის გაზაფხულს პირუსმა იტალიაში გადმოსხა არმია, რომელშიც 20 საბრძოლო სპილოც იყო. პიროსის და რომაელების პირველი ბრძოლა ქალაქ ჰერაკლიასთან მოხდა. რომაელები ამ ბრძოლაში სასტიკად დამარცხდნენ და მთელი სამხრეთ იტალია, [[ნეაპოლი|ნეაპოლის]] და კაპუას გარდა დაკარგეს.
+პირველ შეტაკებაში რომაელებმა გაიმარჯვეს. ტარენტელებმა [[ეპიროსი|ეპიროსის]] მეფეს [[პიროსი|პიროსს]], თავისი ეპოქის ერთერთ უდიდეს მხედართმთავარს, მიმართეს დახმარებისთვის. [[ძვ. წ. 280]] წლის გაზაფხულს პირუსმა იტალიაში გადმოსხა არმია, რომელშიც 20 საბრძოლო სპილოც იყო. პიროსის და რომაელების პირველი ბრძოლა ქალაქ ჰერაკლიასთან მოხდა. რომაელები ამ ბრძოლაში სასტიკად დამარცხდნენ და მთელი სამხრეთ იტალია, [[ნეაპოლი|ნეაპოლის]] და კაპუას გარდა დაკარგეს.
 
 შემდეგ წელს პიროსმა ისევ დაამარცხა რომაელები, მაგრამ იმხელა დანაკარგი ჰქონდა, რომ როდესაც მას ამის შესახებ შეატყობინეს, პირუსმა თქვა "კიდევ ერთი ასეთი გამარჯვება და ეპიროსში მარტო მომიწევს დაბრუნება!". ამის შემდეგ პიროსის მდგომარეობა იტალიაში ძალიან გართულდა, მას აღარ ჰქონდა იტალიაში ომის გაგრძელების საშუალება, თან ბერძნული ქალაქები მისით უკმაყოფილებას გამოთქვავდნენ. ამ მიზეზებიდან გამომდინარე პიროსმა დაიწყო რომთან სამშვიდობო მოლაპარაკებები, მაგრამ რომაელები შეეკვრნენ კართაგენს სირაკუზას წინააღმდეგ და განაგრძეს პიროსთან ომი.
 
@@ -261,18 +261,20 @@
 
 ისტორიკოსმა სალუსტიუსმა აღწერა იუგურტასთან ომი და კატილინას შეთქმულება. იგი მარიუსის დიდი მომხრე იყო.
 
-ცირკის წარმოდგენები და გლადიატორების თამაშები რომში უდიდესი პოპულარობით სარგებლობდნენ. პირველად გლადიატორთა თამაშები მოეწყო ძვ. წ. 254 წელს. თამაშებს აწყობდნენ პოლიტიკური მოღვაწეები, რითაც იხვეჭდნენ ხალხის სიყვარულს და პოპულარობას. ამის გარდა პოპულარული იყო ფარსები და პანტომიმები.
+ცირკის წარმოდგენები და გლადიატორების თამაშები რომში უდიდესი პოპულარობით სარგებლობდნენ. პირველად გლადიატორთა თამაშები მოეწყო [[ძვ. წ. 254]] წელს. თამაშებს აწყობდნენ პოლიტიკური მოღვაწეები, რითაც იხვეჭდნენ ხალხის სიყვარულს და პოპულარობას. ამის გარდა პოპულარული იყო ფარსები და პანტომიმები.
 
 არქიტექტურამ და სახვითმა ხელოვნებამაც განვითარების მნიშვნელოვანი ეტაპი გაიარა. II საუკუნიდან ქალაქებში დაიწყო ისეთი მონუმენტალური და დეკორატიული მშენებლობა, როგორიცაა ტრიუმფალური თაღები. 
 
 რესპუბლიკის ეპოქის მიწურულს მოხდა რომის გალამაზება, ფორუმის მორთვა. ამ დროისთვის რომი უკვე მრავალეროვანი მეგალოპისი გახდა, სადაც სხვადასხვა პროვინციებიდან ჩამოსულები სახლდებოდნენ, მათაც ქალაქს თავისებული იერი შესძინეს.
 
-==ბმულები და წყაროები==
+==ლიტერატურა==
 
 * [[პლუტარქოსი]] შედარებითი ბიოგრაფიები
 * [[გაიუს ტრანკვილიუს სვეტონიუსი]] 12 კეისარის ცხოვრება.
 * ლევან სანიკიძე, კეისარიადა (1989 თბილისის უნივერსიტეტის გამომცემლობა)
 * ძველი რომის ისტორია - მინსკი
+
+==რესურსები ინტერნეტში== 
 * http://ancientrome.ru
 * http://itsa.ucsf.edu/~snlrc/encyclopaedia_romana/index.html
 * http://www.roman-empire.net
