*Empty MediaWiki Message*

--- a/9.mw
+++ b/9.mw
@@ -14,4 +14,51 @@
 
 
 
-[[კატეგორია:ძვ. წ. 9|*]]
+[[კატეგორია:9|*]]
+
+
+[[af:9]]
+[[als:9]]
+[[ast:9]]
+[[bg:9]]
+[[bs:9]]
+[[ca:9]]
+[[cs:9]]
+[[da:9]]
+[[de:9]]
+[[el:9]]
+[[en:9]]
+[[eo:9]]
+[[es:9]]
+[[et:9]]
+[[eu:9]]
+[[fa:۹ (میلادی)]]
+[[fi:9]]
+[[fr:9]]
+[[gl:9]]
+[[he:9]]
+[[hr:9]]
+[[hu:9]]
+[[id:9]]
+[[io:9]]
+[[it:9]]
+[[ja:9年]]
+[[ko:9년]]
+[[la:9]]
+[[lb:9]]
+[[nap:9]]
+[[nl:9]]
+[[nn:9]]
+[[no:9]]
+[[pl:9]]
+[[pt:9]]
+[[ro:9]]
+[[ru:9]]
+[[sk:9]]
+[[sl:9]]
+[[sr:9]]
+[[sv:9]]
+[[tr:9]]
+[[tt:9]]
+[[uk:9]]
+[[zh:9年]]
