--- a/9.mw
+++ b/9.mw
@@ -4,7 +4,7 @@
 
 ==მოვლენები==
 
-*[[ტევტობურის ტრის ბრძოლა|ტევტობურის ტრის ბრძოლა]] 
+*[[ტევტობურის ტყის ბრძოლა|ტევტობურის ტყის ბრძოლა]] 
 
 
 ==დაიბადნენ==
