--- a/14.mw
+++ b/14.mw
@@ -13,4 +13,55 @@
 * [[ოქტავიან ავგუსტუსი]]
 
 
-[[კატეგორია:ძვ. წ. 14|*]]
+[[კატეგორია:14|*]]
+
+
+
+[[af:14]]
+[[als:14]]
+[[an:14]]
+[[ast:14]]
+[[az:14]]
+[[bg:14]]
+[[bs:14]]
+[[ca:14]]
+[[cs:14]]
+[[da:14]]
+[[de:14]]
+[[el:14]]
+[[en:14]]
+[[eo:14]]
+[[es:14]]
+[[et:14]]
+[[eu:14]]
+[[fa:۱۴ (میلادی)]]
+[[fi:14]]
+[[fr:14]]
+[[gl:14]]
+[[he:14]]
+[[hr:14]]
+[[hu:14]]
+[[id:14]]
+[[io:14]]
+[[it:14]]
+[[ja:14年]]
+[[ko:14년]]
+[[la:14]]
+[[lb:14]]
+[[ms:14]]
+[[nap:14]]
+[[nl:14]]
+[[nn:14]]
+[[no:14]]
+[[pl:14]]
+[[pt:14]]
+[[ro:14]]
+[[ru:14]]
+[[sk:14]]
+[[sl:14]]
+[[sr:14]]
+[[sv:14]]
+[[tr:14]]
+[[tt:14]]
+[[uk:14]]
+[[zh:14年]]
