--- a/17.mw
+++ b/17.mw
@@ -12,4 +12,50 @@
 ==გარდაიცვალნენ==
 
 
-[[კატეგორია:ძვ. წ. 17|*]]
+[[კატეგორია:17|*]]
+
+
+[[af:17]]
+[[als:17]]
+[[an:17]]
+[[ast:17]]
+[[az:17]]
+[[bg:17]]
+[[bs:17]]
+[[ca:17]]
+[[cs:17]]
+[[da:17]]
+[[de:17]]
+[[el:17]]
+[[en:17]]
+[[eo:17]]
+[[es:17]]
+[[eu:17]]
+[[fi:17]]
+[[fr:17]]
+[[gl:17]]
+[[hr:17]]
+[[hu:17]]
+[[id:17]]
+[[io:17]]
+[[it:17]]
+[[ko:17년]]
+[[la:17]]
+[[lb:17]]
+[[ms:17]]
+[[nap:17]]
+[[nl:17]]
+[[nn:17]]
+[[no:17]]
+[[pl:17]]
+[[pt:17]]
+[[ro:17]]
+[[ru:17]]
+[[sk:17]]
+[[sl:17]]
+[[sr:17]]
+[[sv:17]]
+[[tr:17]]
+[[tt:17]]
+[[uk:17]]
+[[zh:17年]]
