--- a/37.mw
+++ b/37.mw
@@ -13,4 +13,53 @@
 ==გარდაიცვალნენ==
 * [[ტიბერიუსი]] რომის იმპერატორი
 
-[[კატეგორია:ძვ. წ. 24|*]]
+[[კატეგორია:37|*]]
+
+
+
+[[af:37]]
+[[als:37]]
+[[an:37]]
+[[ast:37]]
+[[az:37]]
+[[bg:37]]
+[[bs:37]]
+[[ca:37]]
+[[cs:37]]
+[[da:37]]
+[[de:37]]
+[[el:37]]
+[[en:37]]
+[[eo:37]]
+[[es:37]]
+[[et:37]]
+[[eu:37]]
+[[fi:37]]
+[[fr:37]]
+[[gl:37]]
+[[he:37]]
+[[hr:37]]
+[[hu:37]]
+[[id:37]]
+[[io:37]]
+[[it:37]]
+[[ko:37년]]
+[[la:37]]
+[[lb:37]]
+[[ms:37]]
+[[nap:37]]
+[[nl:37]]
+[[nn:37]]
+[[no:37]]
+[[pl:37]]
+[[pt:37]]
+[[ro:37]]
+[[ru:37]]
+[[sk:37]]
+[[sl:37]]
+[[sr:37]]
+[[sv:37]]
+[[tr:37]]
+[[tt:37]]
+[[uk:37]]
+[[zh:37年]]
