*Empty MediaWiki Message*

--- a/41.mw
+++ b/41.mw
@@ -13,4 +13,45 @@
 ==გარდაიცვალნენ==
 * [[კალიგულა]] რომის იმპერატორი
 
-[[კატეგორია:ძვ. წ. 41|*]]
+[[კატეგორია:41|*]]
+
+
+[[af:41]]
+[[an:41]]
+[[ast:41]]
+[[bg:41]]
+[[bs:41]]
+[[ca:41]]
+[[cs:41]]
+[[da:41]]
+[[de:41]]
+[[el:41]]
+[[en:41]]
+[[eo:41]]
+[[es:41]]
+[[eu:41]]
+[[fi:41]]
+[[fr:41]]
+[[he:41]]
+[[hr:41]]
+[[id:41]]
+[[io:41]]
+[[it:41]]
+[[ko:41년]]
+[[lb:41]]
+[[ms:41]]
+[[nap:41]]
+[[nl:41]]
+[[nn:41]]
+[[no:41]]
+[[pl:41]]
+[[pt:41]]
+[[ro:41]]
+[[ru:41]]
+[[sk:41]]
+[[sl:41]]
+[[sr:41]]
+[[sv:41]]
+[[tt:41]]
+[[uk:41]]
+[[zh:41年]]
