sachiro ganmarteba davamate

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -119,7 +119,11 @@
 
 ამ ტერმინებს - ხილონი და მასორათი - ისრაელში მეტად მრავალმნიშვნელოვნად იყენებენ. ამის მიზეზი ისაა, რომ მათ შორის არსებული განსხვავებების მიუხედავად, სეკულარისტთა და ტრადიციონალისტთა მნიშვნელოვან ნაწილს არცთუ ცოტა საერთო თვისება ახასიათებს - როგორც იდეოლოგიურად, ისე ებრაული კანონების შესრულების მხრივ. (სეკულარისტთა უმრავლესობა თითქმის არასოდეს არ ლოცულობს, არც [[შაბათი |შაბათისა]] და [[ქაშრუთი |ქაშრუთის]], ანუ კვების, წესებს იცავს; მეორე მხრივ, სეკულარისტთა უმრავლესობა ტრადიციულად ასრულებს ჩვილ ვაჟთა [[ წინადაცვეთა |წინადაცვეთის]], საქორწილო ცერემონიის, მარხვა-გლოვის, [[ფესახი |ფესახში]] პურეული საკვების აღკვეთისა და [[ქიფურის დღე |ქიფურის დღის]] მარხულობის რელიგიურ წესებს. ტრადიციონალისტები, ბოლოს ჩამოთვლილი წესების გარდა, უფრო ხშირადაც ლოცულობენ, შაბათობით სინაგოგაში დადიან და ქაშრუთის კანონებს ასრულებენ; მიუხედავად ამისა, ტრადიციონალისტთა უმრავლესობა შაბათის ბევრ კანონს არღვევს და საერთოდ, სეკულარისტთა მსგავსად, ცხოვრების დასავლური სტილის მიმდევარია). 
 
-დიასპორაში მართლმადიდებლურად წოდებული მიმდინარეობა ისრაელში სხვადასხვა ვარიანტებში არსებობს და ებრაელთა უფრო ნაწილს წარმოადგენს, ვიდრე სხვაგან. ისრაელში კამათი მიმდინარეობს იმაზე, თუ ებრაული მოსახლეობის რამდენ პროცენტს შეადგენენ ასეთი, დათი (რელიგიოზი) ებრაელები. ამის გამოსარკვევად ამოწმებენ, პროპორციულად რა ნაწილს შეადგენენ რელიგიოზი პარლამენტარები [[ქნესეთი |ქნესეთის]] წევრებისაგან, რელიგიური სკოლების მოწაფეები ებრაელ მოსწავლეებისაგან, თან სტატისტიკურ კვლევებსაც აწარმოებენ "ვინაობის" საკითხში. საერთო ვარაუდით, აქ რელიგიოზები ებრაელების 15 პროცენტი არიან. ისრაელში, არც რელიგიოზები და არც სეკულარისტები არ იყენებენ ტერმინს - მართლმადიდებელი (ან ორთოდოქსი). ვისაც დიასპორაში მართლმადიდებელს დაუძახებდნენ, ისრაელში მას ''დათი'' (რელიგიოზი) ან ''ხარედი'' (ულტრა-ორთოდოქსი) ეწოდება. ყოველი ხარედი, რა თქმა უნდა დათია (რელიგიოზია). ის დათი, ვინც ხარედი არაა, თავისი ვინაობის დასახასიათებლად ტერმინ დათის სხვა სიტყვას დაუმატებს; ასე წარმოიშვა ტერმინი ''დათი-ციონი'' (სიონისტი რელიგიოზი). ასეთი ებრაელი მართლმადიდებლურად ასრულებს რელიგიურ კანონებს, მაგრამ თორასთან ერთად დიდ მნიშვნელობას ანიჭებს განათლებას და არარელიგიოზი ებრაელების მსგავსად მსახურობს ისრაელის არმიაში. სიონისტ რელიგიოზთა უმეტესი ნაწილი მემარჯვენე პოლიტიკურ შეხედულებებს იზიარებს და [[1967]] წელს შემოერთებულ ტერიტორიებზე დასახლებულ ებრაელთა უმრავლესობას წარმოადგენს. რადგან სწორედ ასეთი ებრაელია ტიპიური სიონისტი რელიგიოზი, ისრაელში ის უფრო ცნობილია ტერმინით ''დათი-ლეუმი'' (ნაციონალისტი რელიგიოზი).     
+დიასპორაში მართლმადიდებლურად წოდებული მიმდინარეობა ისრაელში სხვადასხვა ვარიანტებში არსებობს და ებრაელთა უფრო ნაწილს წარმოადგენს, ვიდრე სხვაგან. ისრაელში კამათი მიმდინარეობს იმაზე, თუ ებრაული მოსახლეობის რამდენ პროცენტს შეადგენენ ასეთი, დათი (რელიგიოზი) ებრაელები. ამის გამოსარკვევად ამოწმებენ, პროპორციულად რა ნაწილს შეადგენენ რელიგიოზი პარლამენტარები [[ქნესეთი |ქნესეთის]] წევრებისაგან, რელიგიური სკოლების მოწაფეები ებრაელ მოსწავლეებისაგან, თან სტატისტიკურ კვლევებსაც აწარმოებენ "ვინაობის" საკითხში. საერთო ვარაუდით, აქ რელიგიოზები ებრაელების 15 პროცენტი არიან. ისრაელში, არც რელიგიოზები და არც სეკულარისტები არ იყენებენ ტერმინს - მართლმადიდებელი (ან ორთოდოქსი). ვისაც დიასპორაში მართლმადიდებელს დაუძახებდნენ, ისრაელში მას ''დათი'' (რელიგიოზი) ან ''ხარედი'' (ულტრა-ორთოდოქსი) ეწოდება. ყოველი ხარედი, რა თქმა უნდა დათია (რელიგიოზია). ის დათი, ვინც ხარედი არაა, თავისი ვინაობის დასახასიათებლად ტერმინ დათის სხვა სიტყვას დაუმატებს; ასე წარმოიშვა ტერმინი ''დათი-ციონი'' (სიონისტი რელიგიოზი). ასეთი ებრაელი მართლმადიდებლურად ასრულებს რელიგიურ კანონებს, მაგრამ თორასთან ერთად დიდ მნიშვნელობას ანიჭებს განათლებას და არარელიგიოზი ებრაელების მსგავსად მსახურობს ისრაელის არმიაში. სიონისტ რელიგიოზთა უმეტესი ნაწილი მემარჯვენე პოლიტიკურ შეხედულებებს იზიარებს და [[1967]] წელს შემოერთებულ ტერიტორიებზე დასახლებულ ებრაელთა უმრავლესობას წარმოადგენს. რადგან სწორედ ასეთი ებრაელია ტიპიური სიონისტი რელიგიოზი, ისრაელში ის უფრო ცნობილია ტერმინით ''დათი-ლეუმი'' (ნაციონალისტი რელიგიოზი). მიუხედავად იმისა, რომ ''დათი-ლეუმი'' ებრაელები ისრაელის დემოკრატიას ეგუებიან, მათი რწმენით ისრაელის სახელმწიფო მესიანური ეპოქის მომასწავებელი მოვლენაა, რომელსაც ოდესმე მესია, ისრაელის სამეფოს აღდგენა და თორის კანონების დამყარება მოჰყვება. ისრაელში, ასეთი ებრაელები '''რელიგიოზ''' ებრაელთა 1/3-ს შეადგენენ.
+
+''ხარედი'' ებრაელები ისინი არიან, ვისაც დიასპორაში უწოდებდნენ მართლმადიდებელ ებრაელებს. ეთნიკური და იდეოლოგიური კატეგორიებით, ხარედები ოთხ ჯგუფად იყოფიან: 1) ''მითნაგედი'', ანუ (ხასიდიზმის) "''მოწინააღმდეგე''" აშქენაზი ხარედები, რომლებსაც "ლიტველებსაც" უწოდებენ, რადგან ხასიდიზმის წარმოშობისას, [[ევროპა |ევროპელ]] ებრაელთა რელიგიური კონსერვატიზმის ცენტრი ევროპაში, სწორედ [[ლიტვა |ლიტვაში]] მდებარეობდა. 2) ''ხასიდი'' ხარედები, აშქენაზური წარმოშობისა. 3) ''სეფარადი'' ("აღმოსავლელი") ხარედები. 4) ''ხარედი-ლეუმი'' (ნაციონალისტი ხარედი) ებრაელები, რომლებიც მართლმადიდებლობას ნაციონალისტურ იდეოლოგიასთან ახამებენ, მაგრამ დათი-ლეუმებისაგან განსხვავებით, განათლებაზე და არმიაში სამსახურზე უარს აცხადებენ. უკანასკნელი, მცირერიცხოვანი ჯგუფის გამონაკლისით, ხარედების უმრავლესობა (განსაკუთრებით აშქენაზური წარმოშობისა) ოფიციალურად უარყოფს სიონიზმს, როგორც ღვთისადმი ურჩობას; მათი აზრით, ებრაელებს მხოლოდ ღმერთი იხსნის, ხოლო ხსნა მხოლოდ მესიის მოსვლით გამომჟღავნდება. რაც შეეხება სეფარად ხარედებს, მათი უმრავლესობა თუმცა უარყოფს სიონისტურ იდეოლოგიას, მაგრამ ისრაელის სახელმწიფოსადმი მეტად დადებითი მიდგომით გამოირჩევა; ამის მაჩვენებელი ისიცაა, რომ ხარედთა შორის, სეფარადები ყველაზე მეტად აქტიურობენ პოლიტიკურ სფეროში, განსაკუთრებით მე-20 საუკუნის 90-ანი წლებიდან.     
+
+    
   
         
         
