--- a/სულეიმან_ქუჩუქი.mw
+++ b/სულეიმან_ქუჩუქი.mw
@@ -1,4 +1,4 @@
-'''სულეიმან ქუჩუქი''' (''მცირე'') (* [[1785]]  ―   †  [[181]]0), ბაღდადის ფაშა ([[1807]]-[[1810]]), ქართველი. ქ. ბაღდადში წაიყვანა ბიძამ ჰაფიზ ალი-ფაშა. იყო მამაცი გამგებელი, მოსახლეობის აქტიური მხარდაჭერით წარმატებით იცავდა [[მამლუქები|მამლუქთა]] რეჟიმს ირანის შაჰის, ვაჰაბიტებისა და ოსმალეთის სულთნის ხელყოფისაგან. მანვე ჩაფუშა საფრანგეთისა და ინგლისის ცდები, გადაექციათ [[ერაყი]] თავიანთ კოლონიად. დაიღუპა [[ქურთები|ქურთების]] წინააღმდეგ ბრძოლაში.
+'''სულეიმან ქუჩუქი''' (''მცირე'') (* [[1785]]  ―   †  [[1810]]), ბაღდადის ფაშა ([[1807]]-[[1810]]), ქართველი. ქ. ბაღდადში წაიყვანა ბიძამ ჰაფიზ ალი-ფაშა. იყო მამაცი გამგებელი, მოსახლეობის აქტიური მხარდაჭერით წარმატებით იცავდა [[მამლუქები|მამლუქთა]] რეჟიმს ირანის შაჰის, ვაჰაბიტებისა და ოსმალეთის სულთნის ხელყოფისაგან. მანვე ჩაფუშა საფრანგეთისა და ინგლისის ცდები, გადაექციათ [[ერაყი]] თავიანთ კოლონიად. დაიღუპა [[ქურთები|ქურთების]] წინააღმდეგ ბრძოლაში.
 
 
 [[კატეგორია:ქართველები]]
