--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -2,9 +2,9 @@
 
 ==წარმოშობა და მეფედ არჩევა==
 
-ლუციუსი იყო კორინთოელი დემარატის ვაჟი, მამა მისი [[კორინთო|კორინთოდან]] განდევნეს (ან გაიქცა) და ეტრუსკულ ქალაქ ტარკვინიუსში დასახლდა. ცოლი მოიყვანა და ორი ვაჟი, ლუკუმონუსი (მოგვიანებით ლუციუსი) და არუნტი შეეძინა. ლუკომონუსის ძმა ადრე მოკვდა, ამიტომ იგი თავისი მამის ქონების ერთადერთი მემკვიდრე გახდა. მამის სიკვდილის შემდეგ მან ცოლად დიდგვაროვანი ქალი ტანაკვილი. პატივმოყვარე ქალისთვის რთული იყო იმასთან შეგუება რომ მისი მეუღლე არ სარგებლობდა ქალაქში სათანადო პატივით. ლუკუმონუსიც არ იყო პატივმოყვარეობას მთლად მოკლებული. მისმა მეუღლემ მიიჩნია რომ რომი მისი ჭკვიანი ქმრისთვის საუკეთესო ადგილი გახდებოდა, ვინაიდან რომი ახალი დაარსებული იყო და შესაბამისად იქაური არისტოკრატია ახალი წარმოშობილი იყო, თან მათ თავისი ადგილი საზოგადოებაში მხოლოდ პირადი დამსახურებებით მიიღეს.
+ლუციუსი იყო [[კორინთო|კორინთოელი]] დემარატის ვაჟი, მამამისი კორინთოდან სამოქალაქო ომის დროს გაიქცა და ეტრუსკულ ქალაქ ტარკვინიუსში დასახლდა. აქ მან ცოლი მოიყვანა და ორი ვაჟი, ლუკუმონუსი (მოგვიანებით ლუციუსი) და არუნტი შეეძინა. ლუკომონუსის ძმა ადრე მოკვდა, ამიტომ იგი თავისი მამის ქონების ერთადერთი მემკვიდრე გახდა. მამის სიკვდილის შემდეგ მან ცოლად დიდგვაროვანი ქალი ტანაკვილი მოიყვანა. პატივმოყვარე ქალისთვის რთული იყო იმასთან შეგუება რომ მისი მეუღლე არ სარგებლობდა ქალაქში სათანადო პატივით. ლუკუმონუსიც არ იყო პატივმოყვარეობას მთლად მოკლებული. მისმა მეუღლემ მიიჩნია რომ რომი მისი ჭკვიანი და ენერგიული ქმრის თვისებების გამოსავლენად და განსადიდებლად საუკეთესო ადგილი გახდებოდა, ვინაიდან ეს ქალაქი ახალი დაარსებული იყო და შესაბამისად იქაური არისტოკრატიაც ახალი წარმოშობილი იყო, თან მათ თავისი ადგილი საზოგადოებაში მხოლოდ პირადი დამსახურებებით მიიღეს.
 
-ამრიგად ცოლქმარი რომში გადასახლდა. ახლად ჩამოსულები ქალაქში კარგად მიიღეს. აქ ლუკუმონუსმა სახელი შეიცვალა და ლუციუს ტრანკვინუსი დაირქვა. ტანაკვილი არ შეცდა არჩევანში, ლუციუსმა მალე მიიპყრო რომაელთა ყურადღება და მეფესთანაც დაახლოვდა.
+ამრიგად ცოლქმარი რომში გადასახლდა. ახლად ჩამოსულები ქალაქში კარგად მიიღეს. აქ ლუკუმონუსმა სახელი შეიცვალა და ლუციუს ტრანკვინუსი დაირქვა, მოგვიანებით კი მას პრისკუსი ანუ ძველი8 შეარქვეს რათა მეორე ლუციუს ტარკვინიუსისგან განეხვავებინათ. ტანაკვილი არ შეცდა არჩევანში, ლუციუსმა მალე მიიპყრო რომაელთა ყურადღება და მეფესთანაც დაახლოვდა.
 
 ==მმართველობა==
 
