/* წარმოშობა და მეფედ არჩევა */

--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -4,7 +4,9 @@
 
 ლუციუსი იყო [[კორინთო|კორინთოელი]] დემარატის ვაჟი, მამამისი კორინთოდან სამოქალაქო ომის დროს გაიქცა და ეტრუსკულ ქალაქ ტარკვინიუსში დასახლდა. აქ მან ცოლი მოიყვანა და ორი ვაჟი, ლუკუმონუსი (მოგვიანებით ლუციუსი) და არუნტი შეეძინა. ლუკომონუსის ძმა ადრე მოკვდა, ამიტომ იგი თავისი მამის ქონების ერთადერთი მემკვიდრე გახდა. მამის სიკვდილის შემდეგ მან ცოლად დიდგვაროვანი ქალი ტანაკვილი მოიყვანა. პატივმოყვარე ქალისთვის რთული იყო იმასთან შეგუება რომ მისი მეუღლე არ სარგებლობდა ქალაქში სათანადო პატივით. ლუკუმონუსიც არ იყო პატივმოყვარეობას მთლად მოკლებული. მისმა მეუღლემ მიიჩნია რომ რომი მისი ჭკვიანი და ენერგიული ქმრის თვისებების გამოსავლენად და განსადიდებლად საუკეთესო ადგილი გახდებოდა, ვინაიდან ეს ქალაქი ახალი დაარსებული იყო და შესაბამისად იქაური არისტოკრატიაც ახალი წარმოშობილი იყო, თან მათ თავისი ადგილი საზოგადოებაში მხოლოდ პირადი დამსახურებებით მიიღეს.
 
-ამრიგად ცოლქმარი რომში გადასახლდა. ახლად ჩამოსულები ქალაქში კარგად მიიღეს. აქ ლუკუმონუსმა სახელი შეიცვალა და ლუციუს ტრანკვინუსი დაირქვა, მოგვიანებით კი მას პრისკუსი ანუ ძველი8 შეარქვეს რათა მეორე ლუციუს ტარკვინიუსისგან განეხვავებინათ. ტანაკვილი არ შეცდა არჩევანში, ლუციუსმა მალე მიიპყრო რომაელთა ყურადღება და მეფესთანაც დაახლოვდა.
+ამრიგად ცოლქმარი რომში გადასახლდა. ახლად ჩამოსულები ქალაქში კარგად მიიღეს. აქ ლუკუმონუსმა სახელი შეიცვალა და ლუციუს ტრანკვინუსი დაირქვა, მოგვიანებით კი მას პრისკუსი ანუ ძველი8 შეარქვეს რათა მეორე ლუციუს ტარკვინიუსისგან განეხვავებინათ. ტანაკვილი არ შეცდა არჩევანში, ლუციუსმა მალე მიიპყრო რომაელთა ყურადღება და მეფე [[ანკუს მარციუსი|ანკუს მარციუსთან]] დაახლოვდა. იგი ქალაქის საბჭიებში აქტიურ მონაწილეობას იღებდა და მალე მეფის ნდობობა და მეგობრობაც დაიმსახურამ ამგვარად მარციუსის გარდაცვალების შემდეგ იგი მისი ვაჟების მეურვე გახდა.
+
+ტარკვინიუსი
 
 ==მმართველობა==
 
