/* წარმოშობა და მეფედ არჩევა */

--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -6,7 +6,7 @@
 
 ამრიგად ცოლქმარი რომში გადასახლდა. ახლად ჩამოსულები ქალაქში კარგად მიიღეს. აქ ლუკუმონუსმა სახელი შეიცვალა და ლუციუს ტრანკვინუსი დაირქვა, მოგვიანებით კი მას პრისკუსი ანუ ძველი8 შეარქვეს რათა მეორე ლუციუს ტარკვინიუსისგან განეხვავებინათ. ტანაკვილი არ შეცდა არჩევანში, ლუციუსმა მალე მიიპყრო რომაელთა ყურადღება და მეფე [[ანკუს მარციუსი|ანკუს მარციუსთან]] დაახლოვდა. იგი ქალაქის საბჭიებში აქტიურ მონაწილეობას იღებდა და მალე მეფის ნდობობა და მეგობრობაც დაიმსახურამ ამგვარად მარციუსის გარდაცვალების შემდეგ იგი მისი ვაჟების მეურვე გახდა.
 
-ტარკვინიუსი
+ტარკვინიუსი ყველანაერად ეცადა ახალი მეფოს არჩევნები რაც შეიძლება მალე ჩატარებულიყო, ხოლო არჩევნების დღისთვის ანკუსის ვაჟები სანადიროდ გაუშვა. არჩევნებზე იგი ისეთი შთამბეჭდავი სიტყვით გამოვიდა, რომ სენატმა იგი მეფედ აირჩია.
 
 ==მმართველობა==
 
