--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -10,6 +10,8 @@
 
 ==მმართველობა==
 
+ტარკვინიუსმა სენატი ახალი სენატორებით შეავსო. პირველი ომი მას ლათინებთან ჰქონდა, რომში იგი დიდძალი ნადავლით დაბრუნდა და აქამდე არნახული სიმდიხრის თამაშები მოაწყო. ცირკისთვის მან გამოყო ადგილი, რომელზეც მოგვიანებით დიდი ცირკი აშენდა. დღეს ეს გრანდიოზული ნაგებობა არაა შემორჩენილი, მაგრამ იმ ადგილზე კარგად ჩანს ცირკის კონტურები.
+
 ==რესურსები ინტერნეტში==
 
 
