--- a/ანკუს_მარციუსი.mw
+++ b/ანკუს_მარციუსი.mw
@@ -20,7 +20,7 @@
 
 ==რესურსები ინტერნეტში==
 
-[http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
+[http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან"]
 
 
 <center>
