--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -11,7 +11,9 @@
 ==მმართველობა==
 
 [[სურათი:Circo.jpg|thumb|დიდი ცირკი დღეს]]
-ტარკვინიუსმა სენატი ახალი სენატორებით შეავსო. პირველი ომი მას ლათინებთან ჰქონდა, რომში იგი დიდძალი ნადავლით დაბრუნდა და აქამდე არნახული სიმდიხრის თამაშები მოაწყო. ცირკისთვის მან გამოყო ადგილი, რომელზეც მოგვიანებით დიდი ცირკი აშენდა. დღეს ეს გრანდიოზული ნაგებობა არაა შემორჩენილი, მაგრამ იმ ადგილზე კარგად ჩანს ცირკის კონტურები.
+ტარკვინიუსმა სენატი ახალი სენატორებით შეავსო. პირველი ომი მას ლათინებთან ჰქონდა, რომში იგი დიდძალი ნადავლით დაბრუნდა და აქამდე არნახული სიმდიხრის თამაშები მოაწყო. ცირკისთვის მან გამოყო ადგილი, რომელზეც მოგვიანებით [[დიდი ცირკი]] აშენდა. დღეს ეს გრანდიოზული ნაგებობა არაა შემორჩენილი, მაგრამ იმ ადგილზე კარგად ჩანს ცირკის კონტურები. ამ დროიდან რომსი შემოვიდა ყოველწლიური თამაშების ჩატარების ტრადიცია, ამ თამაშებს რომაული ანუ დიდი ეწოდა.
+
+ტარკვინიუსს ამის გარდა სურდა ქალაქის გარშემო ქვის გალავნის აგება, მაგრამ მას საბინელებთან გაჩაღებულმა ომმა შეუშალა ხელი.
 
 ==რესურსები ინტერნეტში==
 
