--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -13,7 +13,7 @@
 [[სურათი:Circo.jpg|thumb|დიდი ცირკი დღეს]]
 ტარკვინიუსმა სენატი ახალი სენატორებით შეავსო. პირველი ომი მას ლათინებთან ჰქონდა, რომში იგი დიდძალი ნადავლით დაბრუნდა და აქამდე არნახული სიმდიხრის თამაშები მოაწყო. ცირკისთვის მან გამოყო ადგილი, რომელზეც მოგვიანებით [[დიდი ცირკი]] აშენდა. დღეს ეს გრანდიოზული ნაგებობა არაა შემორჩენილი, მაგრამ იმ ადგილზე კარგად ჩანს ცირკის კონტურები. ამ დროიდან რომსი შემოვიდა ყოველწლიური თამაშების ჩატარების ტრადიცია, ამ თამაშებს რომაული ანუ დიდი ეწოდა.
 
-ტარკვინიუსს ამის გარდა სურდა ქალაქის გარშემო ქვის გალავნის აგება, მაგრამ მას საბინელებთან გაჩაღებულმა ომმა შეუშალა ხელი.
+ტარკვინიუსს ამის გარდა სურდა ქალაქის გარშემო ქვის გალავნის აგება, მაგრამ მას საბინელებთან გაჩაღებულმა ომმა შეუშალა ხელი. ომი იმდენად უეცრად დაიწყო, რომ რომაელებმა სათანადოდ მომზადება ვერც კი მოახერხეს. პირველ ბრძოლაში ორივე მხარემ დიდი დანაკარგები განიცადა, მაგრამ უპირატესობა ვერცერთმა ვერ მოიპოვა. ტარკვინიუსმა განსაზღვრა რომ რომაულ ჯარს აკლდა კარგი მხედრები, ამიტომ არსებულ სამ ცენტურიას მან მხედრები მიამატა.
 
 ==რესურსები ინტერნეტში==
 
