--- a/ლუციუს_პრისკუს_ტარკვინიუსი.mw
+++ b/ლუციუს_პრისკუს_ტარკვინიუსი.mw
@@ -15,6 +15,8 @@
 
 ტარკვინიუსს ამის გარდა სურდა ქალაქის გარშემო ქვის გალავნის აგება, მაგრამ მას საბინელებთან გაჩაღებულმა ომმა შეუშალა ხელი. ომი იმდენად უეცრად დაიწყო, რომ რომაელებმა სათანადოდ მომზადება ვერც კი მოახერხეს. პირველ ბრძოლაში ორივე მხარემ დიდი დანაკარგები განიცადა, მაგრამ უპირატესობა ვერცერთმა ვერ მოიპოვა. ტარკვინიუსმა განსაზღვრა რომ რომაულ ჯარს აკლდა კარგი მხედრები, ამიტომ არსებულ სამ ცენტურიას მან მხედრები მიამატა.
 
+მეორე ბრძოლა მდინარე ანიენის პირას გაიმართა. ჯარის გაძლიერებასთან ერთად რომაელებმა გამოიყენეს ეშმაკობაც: წინასწარ გაგზავნეს ხალხი, რომლებმაც მდინარის პირას მიმოფანტულ მორებს ცეცხლი წაუკიდეს და ტივებით წყალში გაუშვეს, ქარმა გააღვივა ცეცხლი, ტივები კი ხიდის ბურჯებში გაიჩხირა.
+
 ==რესურსები ინტერნეტში==
 
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან"]
